--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: First shot at my webpage
+description: Just adding some test values for now. Eventually, will describe the showcasing/analysis of Vogue's "Between Us" column.
