Edit wording on data slightly

--- a/_data/projects2.yml
+++ b/_data/projects2.yml
@@ -36,11 +36,11 @@
   work-done: historical exhibit & homepage
   when: Spring/Summer 2018
   full-role: >-
-    Web designer on an interactive mapping exhibit which traces
+    Web designer on homepage & an interactive mapping exhibit tracing
     the flow of money from Lowell to Boston during the Industrial
-    Revolution; web designer on homepage.
+    Revolution.
   description: >-
-    The *Historical Atlas of Lowell* maps the economic,
+    The <em>Historical Atlas of Lowell</em> maps the economic,
     political, social, and cultural history of Lowell,
     Massachusetts.
   url: http://mappinglowell.net
