Change Markdown syntax to HTML in YAML data
- Want to avoid processor so doesn't put unnecessary <p> tags in

--- a/_data/projects2.yml
+++ b/_data/projects2.yml
@@ -23,7 +23,7 @@
     Web designer on historical timeline, item collections,
     & item detail pages.
   description: >-
-    *Take Back the Archive* is a public history project to
+    <em>Take Back the Archive</em> is a public history project to
     preserve, visualize, and contextualize the history of
     rape and sexual violence at the University of Virginia.
   url: http://takeback.scholarslab.org
