--- a/_data/projects2.yml
+++ b/_data/projects2.yml
@@ -12,6 +12,8 @@
     practice of experimental scholarship.
   url: http://scholarslab.org
   pic-folder: slabdotorg
+  sponsor: University of Virginia Library
+  date: 2018
 
 # tbta
 - order: 2
@@ -28,6 +30,8 @@
     rape and sexual violence at the University of Virginia.
   url: http://takeback.scholarslab.org
   pic-folder: takeback
+  sponsor: Institute for Public History at UVA
+  date: 2017
 
 # lowell
 - order: 3
@@ -45,6 +49,8 @@
     Massachusetts.
   url: http://mappinglowell.net
   pic-folder: lowell
+  sponsor: University of Massachusetts, Lowell
+  date: 2018
 
 # puzzle poesis
 - order: 4
@@ -61,3 +67,5 @@
     shape as a medium.
   url: http://bpasanek.github.io/puzzlepoesis
   pic-folder: puzzle
+  sponsor: Puzzle Poetry Working Group at UVA
+  date: 2018
