--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-responsive": "^2.14.0"
+  },
+  "dependencies": {
+    "postcss": "^7.0.27",
+    "stylelint": "^13.3.3"
   }
 }
