Change URL in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # 1. metadata
-title: Katherine Donnally Designs
+title: Katherine Donnally
 baseurl: ""
-url: "http://katherinedoes.design" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://kbdonnally.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 description: >- 
   Design website for portfolio & freelance signups.
